PYIC-6652: review markups