@@ -7,7 +7,6 @@ import uk.gov.di.ipv.core.library.gpg45.domain.CredentialEvidenceItem;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -34,14 +33,13 @@ class Gpg45DcmawValidatorTest {
     @Test
     void isSuccessfulShouldReturnFalseOnInvalidCredentialWithNoBiometricVerificationProcessLevel() {
         CredentialEvidenceItem credentialEvidenceItem =
-                new CredentialEvidenceItem(
-                        3,
-                        2,
-                        1,
-                        2,
-                        Collections.singletonList(new CheckDetail()),
-                        null,
-                        Collections.emptyList());
+                CredentialEvidenceItem.builder()
+                        .strengthScore(3)
+                        .validityScore(2)
+                        .activityHistoryScore(1)
+                        .checkDetails(List.of(new CheckDetail()))
+                        .failedCheckDetails(null)
+                        .build();
 
         assertFalse(Gpg45DcmawValidator.isSuccessful(credentialEvidenceItem));
     }
@@ -74,34 +72,5 @@ class Gpg45DcmawValidatorTest {
                         Collections.emptyList());
 
         assertFalse(Gpg45DcmawValidator.isSuccessful(credentialEvidenceItem));
-    }
-
-    @Test
-    void getDcmawVerificationScoreReturnsZeroForNullCheckMethods() {
-        var verificationScore = Gpg45DcmawValidator.getDcmawVerificationScore(null);
-
-        assertEquals(0, verificationScore);
-    }
-
-    @Test
-    void getDcmawVerificationScoreReturnsZeroWhenNoBiometricVerificationProcessLevelExists() {
-        var checkDetailsNoBiometricVerificationProcessLevel = List.of(new CheckDetail());
-        var verificationScore =
-                Gpg45DcmawValidator.getDcmawVerificationScore(
-                        checkDetailsNoBiometricVerificationProcessLevel);
-
-        assertEquals(0, verificationScore);
-    }
-
-    @Test
-    void getDcmawVerificationScoreReturnsScoreWhenBiometricVerificationProcessLevelIsPresent() {}
-
-    {
-        CheckDetail checkDetail = new CheckDetail();
-        checkDetail.setBiometricVerificationProcessLevel(3);
-
-        var verificationScore = Gpg45DcmawValidator.getDcmawVerificationScore(List.of(checkDetail));
-
-        assertEquals(3, verificationScore);
     }
 }
